# Extrator-de-Slides

./: .gitignore  Extract.py  LICENSE  README.md  helper_functions.py  main.py  noxfile.py  pyproject.toml  requirements.txt  requiriments.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
src/ExtratorSlides/: Extract.py  ExtratorDeSlides.py  SlideExtractor.py
tests/: conftest.py  test_extrator.py
