[metadata]
name = Extrator de Slides
description = Programa para extração de slides de uma vídeo-aula.
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ExtratorSlides
install_requires =
    opencv_python>=4
    Pillow >=9
    scikit_image >=0.19.2

python_requires = >=3.6
package_dir =
    =src
zip_safe = no
